src/objects/CM_YTD_HOURS__c.object
<CustomObject>
    <description>For Reporting Snapshot</description>
    <fields>
        <fullName>Created_By_Profile__c</fullName>
        <label>Created By Profile</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Hours__c</fullName>
        <label>Professional Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Wait_Hours__c</fullName>
        <label>Travel/Wait Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>CM YTD HOURS</label>
    <nameField>
        <label>CM YTD HOURS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CM YTD HOURS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>